# levilamina-rust-loader

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  README.zh.md  build.bat  manifest.json  tooth.json  xmake.lua
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  release.yml
crates/levilamina/: Cargo.toml
crates/levilamina-sys/: Cargo.toml
crates/levilamina-sys/src/: lib.rs
crates/levilamina/src/: block.rs  command.rs  container.rs  entity.rs  error.rs  event.rs  ffi.rs  gui.rs  item.rs  kvdb.rs  lib.rs  logger.rs  nbt.rs  player.rs  scoreboard.rs  server.rs  system.rs  types.rs  world.rs
crates/levilamina/src/block/: actions.rs  mod.rs  query.rs
crates/levilamina/src/command/: builder.rs  mod.rs
crates/levilamina/src/container/: mod.rs  ops.rs
crates/levilamina/src/entity/: actions.rs  mod.rs  query.rs
crates/levilamina/src/event/: mod.rs
crates/levilamina/src/event/names/: mob.rs  mod.rs  player.rs  server.rs
crates/levilamina/src/gui/: custom.rs  mod.rs  modal.rs  simple.rs
crates/levilamina/src/item/: mod.rs  query.rs
crates/levilamina/src/money/: listen.rs  mod.rs  ops.rs
crates/levilamina/src/nbt/: mod.rs  parser.rs
crates/levilamina/src/player/: actions.rs  inventory.rs  mod.rs  query.rs  types.rs
crates/levilamina/src/scoreboard/: mod.rs  ops.rs
crates/levilamina/src/server/: commands.rs  data.rs  events.rs  mod.rs  profiler.rs  sim.rs  status.rs  tick.rs  time.rs  world.rs
crates/levilamina/src/sim/: actions.rs  mod.rs
crates/levilamina/src/world/: mod.rs  scan.rs  structures.rs
docs/: DESIGN.md  PORTING_NOTES.md  index.md  pnpm-lock.yaml
docs/.vitepress/: config.mts
docs/advanced/: abi.md  architecture.md  decisions.md  extending.md  memory-safety.md
docs/api/: block.md  command.md  container.md  data.md  entity.md  event.md  gui.md  item.md  log.md  money.md  nbt.md  objects.md  overview.md  player.md  scheduler.md  scoreboard.md  server.md  system.md  world.md
docs/guide/: commands.md  concepts.md  events.md  getting-started.md  logging-scheduling.md  world.md
examples/region-scan/: Cargo.toml  manifest.json
examples/region-scan/src/: lib.rs
src/: BridgeApi.cpp  BridgeApi.h  Entry.cpp  LeviRsAbi.h  RustMod.h  RustModManager.cpp  RustModManager.h
src/bridge/: Actors.cpp  Api.h  ApiTable.cpp  Commands.cpp  Common.cpp  Common.h  Containers.cpp  Events.cpp  Forms.cpp  Items.cpp  KvDbApi.cpp  LogScheduler.cpp  Money.cpp  MoneyGuard.cpp  MoneyGuard.h  NbtApi.cpp  Packets.cpp  Players.cpp  ScoreboardApi.cpp  Server.cpp  SimPlayer.cpp  SysInfo.cpp  World.cpp  WorldInfo.cpp
src/bridge/hooks/: DestroyEvents.cpp  HookEvents.cpp  HookEvents.h  HopperEvents.cpp  Profiler.cpp  TickControl.cpp
tools/: check_abi_sync.py
