[package]
name = "levilamina-sys"
version = "26.20.0"
edition = "2021"
license = "Apache-2.0"
description = "Raw FFI declarations for the levilamina-rs ABI (src/LeviRsAbi.h)."
repository = "https://github.com/Maskviva/levilamina-rust-loader"
readme = "../../README.md"
keywords = ["levilamina", "minecraft", "bedrock", "ffi"]
categories = ["external-ffi-bindings", "game-development"]

[dependencies]
