[package]
name = "levilamina"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Write LeviLamina (Minecraft Bedrock Dedicated Server) mods in safe Rust."
repository = "https://github.com/Maskviva/levilamina-rust-loader"
readme = "../../README.md"
keywords = ["levilamina", "minecraft", "bedrock", "mod", "bds"]
categories = ["game-development", "api-bindings"]

[dependencies]
levilamina-sys = { version = "0.1.0", path = "../levilamina-sys" }
